--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="./png/genfavicon-32.png">
+  <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/open-dyslexic">
 </head>
 <body>
+  <a href="#contenido" class="skip-link">Saltar al contenido</a>
+
   <header class="encabezado">
     <button class="menu-movil" onclick="alternarMenu()">☰</button>
     <nav class="menu-navegacion">
@@ -29,9 +32,14 @@
       <a href="servicios.html">Servicios</a>
       <a href="contacto.html">Contacto</a>
     </nav>
+    <div class="accesibilidad">
+      <button id="modo-normal">Normal</button>
+      <button id="modo-contraste">Contraste</button>
+      <button id="modo-dislexia">Dislexia</button>
+    </div>
   </header>
 
-  <main class="principal">
+  <main id="contenido" class="principal">
     <section class="bienvenida">
       <h1>Bienvenido a Mi Proyecto Web</h1>
       <p>Ofrecemos soluciones digitales creativas para impulsar tu negocio.</p>
