Accesibilidad: script al final y ajustar contraste

--- a/servicios.html
+++ b/servicios.html
@@ -71,5 +71,6 @@
     <a href="#" style="color: var(--acento);">Política de cookies</a></span>
     <button onclick="aceptarCookies()">Aceptar</button>
   </div>
+  <script src="./js/script.js"></script>
 </body>
 </html>
