Corregidos enlaces del footer y contraste cookies

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
   <footer class="pie-pagina" role="contentinfo">
     <p>© 2025 Mi Proyecto Web - Todos los derechos reservados</p>
     <div class="redes-sociales">
-      <a href="#" class="red-social"><i class="fa-brands fa-square-facebook"></i></a>
-      <a href="#" class="red-social"><i class="fa-brands fa-instagram"></i></a>
-      <a href="#" class="red-social"><i class="fa-brands fa-twitter"></i></a>
+      <a href="https://www.facebook.com" class="red-social" aria-label="facebook"><i class="fa-brands fa-square-facebook"></i></a>
+      <a href="https://www.instagram.com" class="red-social" aria-label="instagram"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.twitter.com" class="red-social" aria-label="twitter"><i class="fa-brands fa-twitter"></i></a>
     </div>
   </footer>
 
