--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <div id="bannerCookies" class="banner-cookies" role="status" aria-live="polite" aria-label="Aviso de cookies">
     <span><i class="fa-solid fa-cookie"></i> Usamos cookies para mejorar tu experiencia. 
-    <a href="#" style="color: var(--acento);">Política de cookies</a></span>
+    <a href="#">Política de cookies</a></span>
     <button onclick="aceptarCookies()" aria-label="Aceptar cookies">Aceptar</button>
   </div>
   <script src="./js/script.js"></script>
