Cambios en el css boton de nuevo

--- a/contacto.html
+++ b/contacto.html
@@ -58,7 +58,7 @@
           Acepto la <a href="#" target="_blank" rel="noopener noreferrer">política de privacidad</a> y el tratamiento de mis datos conforme a la ley RGPD.
         </label>
 
-        <button type="submit">Enviar</button>
+        <button type="submit" class="btn-enviar">Enviar</button>
       </form>
     </section>
   </main>
