--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180">
   <link rel="icon" type="image/png" href="./png/genfavicon-32.png">
   <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/open-dyslexic">
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "v846tdrz37");
+  </script>
 </head>
 <body>
   <a href="#contenido" class="skip-link">Saltar al contenido</a>
