Añadido hotjar(contentsquare)

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "v846tdrz37");
   </script>
+  <script src="https://t.contentsquare.net/uxa/ad39d5df0ee86.js"></script>
 </head>
 <body>
   <a href="#contenido" class="skip-link">Saltar al contenido</a>
