Cambios en parrafos para usabilidad

--- a/servicios.html
+++ b/servicios.html
@@ -45,22 +45,22 @@
         <article class="servicio-detalle">
           <img src="./img/proyecto-diseno.jpg" alt="Proyecto completo de diseño web responsive terminado">
           <h2>Diseño Web</h2>
-          <p>Desarrollamos sitios web adaptables, accesibles y personalizados.</p>
+          <p>Hacemos webs que funcionan en todos los dispositivos.</p>
         </article>
         <article class="servicio-detalle">
           <img src="./img/campana-marketing.jpg" alt="Resultados de campaña de marketing digital con métricas positivas">
           <h2>Marketing Digital</h2>
-          <p>Posiciona tu marca y llega a más clientes con campañas efectivas.</p>
+          <p>Aumentamos tu visibilidad en Internet y redes sociales.</p>
         </article>
         <article class="servicio-detalle">
           <img src="./img/reunion-consultoria.jpg" alt="Sesión de consultoría tecnológica con cliente">
           <h2>Consultoría TI</h2>
-          <p>Mejora tu infraestructura tecnológica con nuestro asesoramiento.</p>
+          <p>Te asesoramos para mejorar tu tecnología.</p>
         </article>
         <article class="servicio-detalle">
           <img src="./img/soporte-tecnico.jpg" alt="Técnico solucionando incidencia en sistema informático">
           <h2>Soporte Técnico</h2>
-          <p>Solución rápida y profesional para problemas técnicos.</p>
+          <p>Resolvemos problemas técnicos de forma rápida.</p>
         </article>
       </div>
     </section>
