Cambios usabilidad en htmls

--- a/contacto.html
+++ b/contacto.html
@@ -42,7 +42,7 @@
     <section class="quienes-somos">
       <img src="./img/equipo.jpg" alt="Equipo completo de Mi Proyecto Web en oficina moderna">
       <h1>Quiénes somos</h1>
-      <p>Somos un equipo que crea soluciones digitales para empresas y negocios</p>
+      <p>Ayudamos a empresas con soluciones digitales.</p>
     </section>
     <div class="geolocalizacion">
       <img src="./img/ubicacion.jpg" alt="Mapa mostrando nuestra ubicación en Vitoria">
@@ -87,3 +87,4 @@
   <script src="./js/script.js"></script>
 </body>
 </html>
+
