--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <main id="contenido" class="principal" role="main">
     <section class="bienvenida">
       <h1>Bienvenido a Mi Proyecto Web</h1>
-      <p>Diseñamos páginas web y soluciones digitales para ayudarte a crecer.</p>
+      <p>Hacemos webs y soluciones digitales para tu negocio.</p>
       <img src="./img/hero-image.jpg" alt="Equipo de trabajo colaborando en proyecto digital" class="imagen-hero">
     </section>
 
@@ -57,17 +57,17 @@
       <div class="grid-servicios">
         <article class="servicio">
           <h3>Diseño Web</h3>
-          <p>Diseñamos webs que se ven bien en móvil y ordenador.</p>
+          <p>Páginas adaptables, modernas y atractivas.</p>
           <img src="./img/diseno-web.jpg" alt="Pantallas de ordenador mostrando diseños web modernos">
         </article>
         <article class="servicio">
           <h3>Marketing Digital</h3>
-          <p>Te ayudamos a ganar clientes en redes y Google.</p>
+          <p>Estrategias para crecer en redes y buscadores.</p>
           <img src="./img/marketing.jpg" alt="Gráficos y estadísticas de crecimiento en redes sociales">
         </article>
         <article class="servicio">
           <h3>Consultoría TI</h3>
-          <p>Mejoramos tus sistemas y procesos tecnológicos.</p>
+          <p>Optimiza tus recursos tecnológicos.</p>
           <img src="./img/consultoria.jpg" alt="Profesional de tecnología analizando datos en tablet">
         </article>
       </div>
