--- a/servicios.html
+++ b/servicios.html
@@ -45,22 +45,22 @@
         <article class="servicio-detalle">
           <img src="./img/proyecto-diseno.jpg" alt="Proyecto completo de diseño web responsive terminado">
           <h2>Diseño Web</h2>
-          <p>Hacemos webs que funcionan en todos los dispositivos.</p>
+          <p>Webs que se adaptan a todo.</p>
         </article>
         <article class="servicio-detalle">
           <img src="./img/campana-marketing.jpg" alt="Resultados de campaña de marketing digital con métricas positivas">
           <h2>Marketing Digital</h2>
-          <p>Aumentamos tu visibilidad en Internet y redes sociales.</p>
+          <p>Te ayudamos a ganar visibilidad online.</p>
         </article>
         <article class="servicio-detalle">
           <img src="./img/reunion-consultoria.jpg" alt="Sesión de consultoría tecnológica con cliente">
           <h2>Consultoría TI</h2>
-          <p>Te asesoramos para mejorar tu tecnología.</p>
+          <p>Asesoría tecnológica.</p>
         </article>
         <article class="servicio-detalle">
           <img src="./img/soporte-tecnico.jpg" alt="Técnico solucionando incidencia en sistema informático">
           <h2>Soporte Técnico</h2>
-          <p>Resolvemos problemas técnicos de forma rápida.</p>
+          <p>Soporte técnico rápido.</p>
         </article>
       </div>
     </section>
