--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
   <link rel="stylesheet" href="./css/estilos.css" />
   <link rel="stylesheet" href="./css/responsive.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="icon" href="/favicon.ico" sizes="32x32">
-  <link rel="icon" href="/genfavicon-32.png" sizes="32x32">
-  <link rel="icon" href="/genfavicon-16.png" sizes="16x16">
-  <link rel="apple-touch-icon" href="/apple-touch-icon-57x57.png" sizes="57x57">
-  <link rel="apple-touch-icon" href="/apple-touch-icon-114x114.png" sizes="114x114">
-  <link rel="apple-touch-icon" href="/apple-touch-icon-120x120.png" sizes="120x120">
-  <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180">
-  <link rel="icon" type="image/png" href="./png/genfavicon-32.png">
   <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/open-dyslexic">
   <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
@@ -48,27 +40,27 @@
   <main id="contenido" class="principal" role="main">
     <section class="bienvenida">
       <h1>Bienvenido a Mi Proyecto Web</h1>
-      <p>Hacemos webs y soluciones digitales para tu negocio.</p>
-      <img src="./img/hero-image.jpg" alt="Equipo de trabajo colaborando en proyecto digital" class="imagen-hero">
+      <p>Diseñamos páginas web simples, rápidas y fáciles de usar.</p>
+      <img src="./img/hero-image.jpg" alt="Equipo trabajando en un proyecto web" class="imagen-hero">
     </section>
 
     <section class="servicios-destacados">
-      <h2>Servicios destacados</h2>
+      <h2>Servicios</h2>
       <div class="grid-servicios">
         <article class="servicio">
           <h3>Diseño Web</h3>
-          <p>Páginas adaptables, modernas y atractivas.</p>
-          <img src="./img/diseno-web.jpg" alt="Pantallas de ordenador mostrando diseños web modernos">
+          <p>Tu web se verá bien en móvil y en ordenador.</p>
+          <img src="./img/diseno-web.jpg" alt="Diseño web en diferentes dispositivos">
         </article>
         <article class="servicio">
           <h3>Marketing Digital</h3>
-          <p>Estrategias para crecer en redes y buscadores.</p>
-          <img src="./img/marketing.jpg" alt="Gráficos y estadísticas de crecimiento en redes sociales">
+          <p>Ayudamos a que te encuentren en Internet.</p>
+          <img src="./img/marketing.jpg" alt="Gráficos de crecimiento de marketing">
         </article>
         <article class="servicio">
           <h3>Consultoría TI</h3>
-          <p>Optimiza tus recursos tecnológicos.</p>
-          <img src="./img/consultoria.jpg" alt="Profesional de tecnología analizando datos en tablet">
+          <p>Te asesoramos para mejorar tu tecnología.</p>
+          <img src="./img/consultoria.jpg" alt="Consultoría tecnológica con cliente">
         </article>
       </div>
     </section>
@@ -91,3 +83,4 @@
   <script src="./js/script.js"></script>
 </body>
 </html>
+
