Cambios en los ALT para legibilidad

--- a/servicios.html
+++ b/servicios.html
@@ -39,27 +39,27 @@
 
   <main id="contenido" class="principal" role="main">
     <section class="lista-servicios">
-      <h1>Servicios que ofrecemos</h1>
+      <h1>Servicios</h1>
       <div class="grid-servicios">
         <article class="servicio-detalle">
-          <img src="./img/proyecto-diseno.jpg" alt="Proyecto de diseño web" />
-          <h2>Diseño Web</h2>
-          <p>Web bonita, rápida y fácil de usar.</p>
+          <img src="./img/proyecto-diseno.jpg" alt="Diseño web">
+          <h2>Web</h2>
+          <p>Web rápida y simple.</p>
         </article>
         <article class="servicio-detalle">
-          <img src="./img/campana-marketing.jpg" alt="Campaña de marketing digital" />
-          <h2>Marketing Digital</h2>
-          <p>Mejoramos tu presencia en redes y buscadores.</p>
+          <img src="./img/campana-marketing.jpg" alt="Marketing">
+          <h2>Marketing</h2>
+          <p>Más clientes online.</p>
         </article>
         <article class="servicio-detalle">
-          <img src="./img/reunion-consultoria.jpg" alt="Consultoría tecnológica" />
-          <h2>Consultoría TI</h2>
-          <p>Te asesoramos para mejorar tu tecnología.</p>
+          <img src="./img/reunion-consultoria.jpg" alt="Consultoría">
+          <h2>Consultoría</h2>
+          <p>Mejoras tecnológicas.</p>
         </article>
         <article class="servicio-detalle">
-          <img src="./img/soporte-tecnico.jpg" alt="Soporte técnico" />
-          <h2>Soporte Técnico</h2>
-          <p>Ayuda rápida para problemas técnicos.</p>
+          <img src="./img/soporte-tecnico.jpg" alt="Soporte">
+          <h2>Soporte</h2>
+          <p>Ayuda rápida.</p>
         </article>
       </div>
     </section>
@@ -79,6 +79,7 @@
     <a href="#">Política de cookies</a></span>
     <button onclick="aceptarCookies()" aria-label="Aceptar cookies">Aceptar</button>
   </div>
+
   <script src="./js/script.js"></script>
 </body>
 </html>
