--- a/contacto.html
+++ b/contacto.html
@@ -39,28 +39,27 @@
 
   <main id="contenido" class="principal" role="main">
     <section class="quienes-somos">
-      <img src="./img/equipo.jpg" alt="Equipo de Mi Proyecto Web" />
       <h1>Contacto</h1>
-      <p>Escríbenos y te respondemos rápido.</p>
+      <p>Escríbenos. Respondemos rápido.</p>
+      <img src="./img/equipo.jpg" alt="Equipo">
     </section>
 
     <div class="geolocalizacion">
-      <img src="./img/ubicacion.jpg" alt="Mapa de ubicación" />
-      <p><i class="fa-solid fa-location-dot"></i> Araba Kalea, 39, Vitoria-Gasteiz</p>
+      <p><i class="fa-solid fa-location-dot"></i> Vitoria-Gasteiz</p>
       <p><i class="fa-solid fa-phone"></i> +34 123 456 789</p>
     </div>
 
     <section class="formulario-contacto">
-      <h2>Envíanos un mensaje</h2>
+      <h2>Mensaje</h2>
       <form action="#">
         <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required />
+        <input type="text" id="nombre" name="nombre" required />
 
         <label for="correo">Correo:</label>
-        <input type="email" id="correo" name="correo" placeholder="tu@email.com" required />
+        <input type="email" id="correo" name="correo" required />
 
         <label for="mensaje">Mensaje:</label>
-        <textarea id="mensaje" name="mensaje" rows="5" placeholder="Escribe tu mensaje" required></textarea>
+        <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
 
         <label class="acepto-privacidad">
           <input type="checkbox" name="privacidad" required />
@@ -86,8 +85,10 @@
     <a href="#">Política de cookies</a></span>
     <button onclick="aceptarCookies()" aria-label="Aceptar cookies">Aceptar</button>
   </div>
+
   <script src="./js/script.js"></script>
 </body>
 </html>
+
 
 
