--- a/index.html
+++ b/index.html
@@ -39,28 +39,28 @@
 
   <main id="contenido" class="principal" role="main">
     <section class="bienvenida">
-      <h1>Bienvenido a Mi Proyecto Web</h1>
-      <p>Diseñamos páginas web simples, rápidas y fáciles de usar.</p>
-      <img src="./img/hero-image.jpg" alt="Equipo trabajando en un proyecto web" class="imagen-hero">
+      <h1>Bienvenido</h1>
+      <p>Diseñamos webs rápidas y fáciles de usar.</p>
+      <img src="./img/hero-image.jpg" alt="Equipo trabajando" class="imagen-hero">
     </section>
 
     <section class="servicios-destacados">
       <h2>Servicios</h2>
       <div class="grid-servicios">
         <article class="servicio">
-          <h3>Diseño Web</h3>
-          <p>Tu web se verá bien en móvil y en ordenador.</p>
-          <img src="./img/diseno-web.jpg" alt="Diseño web en diferentes dispositivos">
+          <h3>Web</h3>
+          <p>Diseño y desarrollo.</p>
+          <img src="./img/diseno-web.jpg" alt="Diseño web">
         </article>
         <article class="servicio">
-          <h3>Marketing Digital</h3>
-          <p>Ayudamos a que te encuentren en Internet.</p>
-          <img src="./img/marketing.jpg" alt="Gráficos de crecimiento de marketing">
+          <h3>Marketing</h3>
+          <p>Más clientes.</p>
+          <img src="./img/marketing.jpg" alt="Marketing digital">
         </article>
         <article class="servicio">
-          <h3>Consultoría TI</h3>
-          <p>Te asesoramos para mejorar tu tecnología.</p>
-          <img src="./img/consultoria.jpg" alt="Consultoría tecnológica con cliente">
+          <h3>Consultoría</h3>
+          <p>Mejoras TI.</p>
+          <img src="./img/consultoria.jpg" alt="Consultoría">
         </article>
       </div>
     </section>
@@ -80,7 +80,7 @@
     <a href="#">Política de cookies</a></span>
     <button onclick="aceptarCookies()" aria-label="Aceptar cookies">Aceptar</button>
   </div>
+
   <script src="./js/script.js"></script>
 </body>
 </html>
-
