--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="./css/estilos.css" />
   <link rel="stylesheet" href="./css/responsive.css" />
+  <link rel="icon" type="image/png" href="./png/genfavicon-32.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/open-dyslexic">
   <script type="text/javascript">
@@ -40,8 +41,8 @@
   <main id="contenido" class="principal" role="main">
     <section class="bienvenida">
       <h1>Bienvenido</h1>
-      <p>Diseñamos webs rápidas y fáciles de usar.</p>
-      <img src="./img/hero-image.jpg" alt="Equipo trabajando" class="imagen-hero">
+      <p>Diseñamos webs simples y rápidas.</p>
+      <img src="./img/hero-image.jpg" alt="Equipo trabajando">
     </section>
 
     <section class="servicios-destacados">
@@ -49,25 +50,25 @@
       <div class="grid-servicios">
         <article class="servicio">
           <h3>Web</h3>
-          <p>Diseño y desarrollo.</p>
+          <p>Diseño y programación.</p>
           <img src="./img/diseno-web.jpg" alt="Diseño web">
         </article>
         <article class="servicio">
           <h3>Marketing</h3>
-          <p>Más clientes.</p>
+          <p>Redes y anuncios.</p>
           <img src="./img/marketing.jpg" alt="Marketing digital">
         </article>
         <article class="servicio">
-          <h3>Consultoría</h3>
-          <p>Mejoras TI.</p>
-          <img src="./img/consultoria.jpg" alt="Consultoría">
+          <h3>Soporte</h3>
+          <p>Ayuda técnica.</p>
+          <img src="./img/consultoria.jpg" alt="Soporte técnico">
         </article>
       </div>
     </section>
   </main>
 
   <footer class="pie-pagina" role="contentinfo">
-    <p>© 2025 Mi Proyecto Web - Todos los derechos reservados</p>
+    <p>© 2025 Mi Proyecto Web</p>
     <div class="redes-sociales">
       <a href="https://www.facebook.com" class="red-social" aria-label="facebook"><i class="fa-brands fa-square-facebook"></i></a>
       <a href="https://www.instagram.com" class="red-social" aria-label="instagram"><i class="fa-brands fa-instagram"></i></a>
