--- a/servicios.html
+++ b/servicios.html
@@ -9,6 +9,7 @@
   <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="./css/estilos.css" />
   <link rel="stylesheet" href="./css/responsive.css" />
+  <link rel="icon" type="image/png" href="./png/genfavicon-32.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/open-dyslexic">
   <script type="text/javascript">
@@ -42,31 +43,31 @@
       <h1>Servicios</h1>
       <div class="grid-servicios">
         <article class="servicio-detalle">
-          <img src="./img/proyecto-diseno.jpg" alt="Diseño web">
-          <h2>Web</h2>
-          <p>Web rápida y simple.</p>
+          <img src="./img/proyecto-diseno.jpg" alt="Diseño">
+          <h2>Diseño Web</h2>
+          <p>Web adaptada a móviles.</p>
         </article>
         <article class="servicio-detalle">
           <img src="./img/campana-marketing.jpg" alt="Marketing">
           <h2>Marketing</h2>
-          <p>Más clientes online.</p>
+          <p>Redes y anuncios.</p>
         </article>
         <article class="servicio-detalle">
           <img src="./img/reunion-consultoria.jpg" alt="Consultoría">
           <h2>Consultoría</h2>
-          <p>Mejoras tecnológicas.</p>
+          <p>Mejoras en TI.</p>
         </article>
         <article class="servicio-detalle">
           <img src="./img/soporte-tecnico.jpg" alt="Soporte">
           <h2>Soporte</h2>
-          <p>Ayuda rápida.</p>
+          <p>Ayuda técnica rápida.</p>
         </article>
       </div>
     </section>
   </main>
 
   <footer class="pie-pagina" role="contentinfo">
-    <p>© 2025 Mi Proyecto Web - Todos los derechos reservados</p>
+    <p>© 2025 Mi Proyecto Web</p>
     <div class="redes-sociales">
       <a href="https://www.facebook.com" class="red-social" aria-label="facebook"><i class="fa-brands fa-square-facebook"></i></a>
       <a href="https://www.instagram.com" class="red-social" aria-label="instagram"><i class="fa-brands fa-instagram"></i></a>
@@ -83,3 +84,4 @@
   <script src="./js/script.js"></script>
 </body>
 </html>
+
