--- a/contacto.html
+++ b/contacto.html
@@ -9,6 +9,7 @@
   <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="./css/estilos.css" />
   <link rel="stylesheet" href="./css/responsive.css" />
+  <link rel="icon" type="image/png" href="./png/genfavicon-32.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/open-dyslexic">
   <script type="text/javascript">
@@ -39,31 +40,31 @@
 
   <main id="contenido" class="principal" role="main">
     <section class="quienes-somos">
-      <h1>Contacto</h1>
-      <p>Escríbenos. Respondemos rápido.</p>
       <img src="./img/equipo.jpg" alt="Equipo">
+      <h1>Quiénes somos</h1>
+      <p>Somos un equipo de tecnología.</p>
     </section>
 
     <div class="geolocalizacion">
-      <p><i class="fa-solid fa-location-dot"></i> Vitoria-Gasteiz</p>
-      <p><i class="fa-solid fa-phone"></i> +34 123 456 789</p>
+      <img src="./img/ubicacion.jpg" alt="Mapa">
+      <i class="fa-solid fa-location-dot"></i> Vitoria-Gasteiz | <i class="fa-solid fa-phone"></i> 123 456 789
     </div>
 
     <section class="formulario-contacto">
-      <h2>Mensaje</h2>
+      <h2>Contacto</h2>
       <form action="#">
         <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required />
+        <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required />
 
         <label for="correo">Correo:</label>
-        <input type="email" id="correo" name="correo" required />
+        <input type="email" id="correo" name="correo" placeholder="tu@email.com" required />
 
         <label for="mensaje">Mensaje:</label>
-        <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+        <textarea id="mensaje" name="mensaje" rows="5" placeholder="Escribe aquí" required></textarea>
 
         <label class="acepto-privacidad">
           <input type="checkbox" name="privacidad" required />
-          Acepto la política de privacidad.
+          Acepto la política.
         </label>
 
         <button type="submit" class="btn-enviar">Enviar</button>
@@ -72,7 +73,7 @@
   </main>
 
   <footer class="pie-pagina" role="contentinfo">
-    <p>© 2025 Mi Proyecto Web - Todos los derechos reservados</p>
+    <p>© 2025 Mi Proyecto Web</p>
     <div class="redes-sociales">
       <a href="https://www.facebook.com" class="red-social" aria-label="facebook"><i class="fa-brands fa-square-facebook"></i></a>
       <a href="https://www.instagram.com" class="red-social" aria-label="instagram"><i class="fa-brands fa-instagram"></i></a>
@@ -89,6 +90,5 @@
   <script src="./js/script.js"></script>
 </body>
 </html>
-
 
 
