Cambio en una imagen en index

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="bienvenida">
       <h1>Bienvenido</h1>
       <p>Diseñamos webs simples y rápidas.</p>
-      <img src="./img/hero-image.jpg" alt="Equipo trabajando">
+      <img class="imagen-hero" src="./img/hero-image.jpg" alt="Equipo trabajando">
     </section>
 
     <section class="servicios-destacados">
