RICH SNIPPET AÑADIDO EN TODAS LAS PÁGINAS

--- a/contacto.html
+++ b/contacto.html
@@ -12,6 +12,29 @@
   <link rel="icon" type="image/png" href="./png/genfavicon-32.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/open-dyslexic">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Mi Proyecto Web",
+      "url": "https://ernestvp.github.io/",
+      "description": "Diseño web moderno, accesible y responsive. Desarrollo web, servicios web y soporte técnico.",
+      "logo": "https://ernestvp.github.io/logo.png",
+      "sameAs": [
+        "https://www.linkedin.com/",
+        "https://www.instagram.com/"
+      ],
+      "service": {
+        "@type": "Service",
+        "name": "Diseño web y servicios web",
+        "description": "Diseño web profesional, desarrollo web, marketing digital y soporte técnico.",
+        "provider": {
+          "@type": "Organization",
+          "name": "Mi Proyecto Web"
+        }
+      }
+    }
+  </script>
 </head>
 <body>
   <a href="#contenido" class="skip-link">Saltar al contenido</a>
