--- a/index.html
+++ b/index.html
@@ -19,6 +19,29 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180">
   <link rel="icon" type="image/png" href="./png/genfavicon-32.png">
   <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/open-dyslexic">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Mi Proyecto Web",
+      "url": "https://ernestvp.github.io/",
+      "description": "Diseño web moderno, accesible y responsive. Desarrollo web, servicios web y soporte técnico.",
+      "logo": "https://ernestvp.github.io/logo.png",
+      "sameAs": [
+        "https://www.linkedin.com/",
+        "https://www.instagram.com/"
+      ],
+      "service": {
+        "@type": "Service",
+        "name": "Diseño web y servicios web",
+        "description": "Diseño web profesional, desarrollo web, marketing digital y soporte técnico.",
+        "provider": {
+          "@type": "Organization",
+          "name": "Mi Proyecto Web"
+        }
+      }
+    }
+  </script>
 </head>
 <body>
   <a href="#contenido" class="skip-link">Saltar al contenido</a>
