SNIPPET cambiados meta + title en cada página

--- a/contacto.html
+++ b/contacto.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="author" content="Tu Nombre" />
-  <meta name="description" content="Contacto con Mi Proyecto Web" />
-  <title>Contacto - Mi Proyecto Web</title>
+  <meta name="description" content="Contacta para crear una web profesional, responsive y accesible. Servicios web, marketing digital y soporte técnico." />
+  <title>Contacto | Diseño web y servicios web</title>
   <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="./css/estilos.css" />
   <link rel="stylesheet" href="./css/responsive.css" />
