--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="author" content="Tu Nombre" />
-  <meta name="description" content="Página de inicio de Mi Proyecto Web" />
-  <title>Inicio - Mi Proyecto Web</title>
+  <meta name="description" content="Diseño web moderno, accesible y responsive para empresas. Desarrollo web, servicios web y soporte técnico para tu página." />
+  <title>Diseño web profesional | Servicios web y soporte técnico</title>
   <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="./css/estilos.css" />
   <link rel="stylesheet" href="./css/responsive.css" />
