--- a/servicios.html
+++ b/servicios.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="author" content="Tu Nombre" />
-  <meta name="description" content="Servicios de Mi Proyecto Web" />
-  <title>Servicios - Mi Proyecto Web</title>
+  <meta name="description" content="Ofrezco diseño web, desarrollo web y marketing digital para pymes. Web responsive y accesible con soporte técnico." />
+  <title>Servicios web | Desarrollo web y marketing digital</title>
   <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="./css/estilos.css" />
   <link rel="stylesheet" href="./css/responsive.css" />
