--- a/contacto.html
+++ b/contacto.html
@@ -44,6 +44,7 @@
       <a href="index.html">Inicio</a>
       <a href="servicios.html">Servicios</a>
       <a href="contacto.html" class="activo">Contacto</a>
+      <a href="enlaces.html">Enlaces</a>
     </nav>
     <div class="accesibilidad" role="region" aria-label="Opciones de accesibilidad">
       <button id="modo-normal" aria-label="Modo normal">Normal</button>
